# id3tool

./: CHANGELOG  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.Win32  acconfig.h  bsd_getopt.c  bsd_getopt.h  config.h  config.h.in  config.h.win32  config.status  configure  configure.in  id3.c  id3tool.1  id3tool.c  id3tool.mak  mkinstalldirs  update-conf
.deps/: bsd_getopt.Po  id3.Po  id3tool.Po
autom4te.cache/: output.0  requests  traces.0
