AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = id3tool

id3tool_SOURCES = \
	id3tool.c \
	id3.c \
	id3.h \
	bsd_getopt.c \
	bsd_getopt.h

EXTRA_DIST = \
	README \
	INSTALL \
	CHANGELOG \
	COPYING \
	id3tool.1 \
	README.Win32 \
	update-conf \
	config.h.win32 \
	id3tool.mak

man_MANS = id3tool.1

CLEANFILES = *~
